language/move-lang/tests/move_check/typing/break_outside_loop.exp
error[E04014]: invalid loop control
  ┌─ tests/move_check/typing/break_outside_loop.move:6:9
  │
6 │         break
  │         ^^^^^ Invalid usage of 'break'. 'break' can only be used inside a loop body

error[E04014]: invalid loop control
   ┌─ tests/move_check/typing/break_outside_loop.move:10:9
   │
10 │         break;
   │         ^^^^^ Invalid usage of 'break'. 'break' can only be used inside a loop body

error[E04014]: invalid loop control
   ┌─ tests/move_check/typing/break_outside_loop.move:14:21
   │
14 │         if (x >= 5) break;
   │                     ^^^^^ Invalid usage of 'break'. 'break' can only be used inside a loop body

